# salasaga

./: ChangeLog  NEWS  NOTES.TXT  RELEASE NOTES.txt  configure.ac
ide/font_outline/: DejaVuSans-BoldOblique.fdb  DejaVuSans-Oblique.fdb  DejaVuSans.fdb  DejaVuSansCondensed-Bold.fdb  DejaVuSansCondensed-Oblique.fdb  DejaVuSansCondensed.fdb  DejaVuSansMono-BoldOblique.fdb  DejaVuSansMono-Oblique.fdb  DejaVuSansMono.fdb  DejaVuSerif-Bold.fdb  DejaVuSerif-BoldItalic.fdb  DejaVuSerif-Italic.fdb  Makefile.am
po/: ar.po  (+40 more)
salasaga/ide/functions/: Makefile.am  create_menu_bar.c  create_resolution_selector.h  create_time_line.c  create_time_line.h  create_toolbar.c  create_toolbar.h  create_zoom_selector.c  create_zoom_selector.h  disable_layer_toolbar_buttons.c  disable_layer_toolbar_buttons.h  disable_main_toolbar_buttons.c  draw_timeline.c  draw_timeline.h  enable_layer_toolbar_buttons.c  enable_layer_toolbar_buttons.h  enable_main_toolbar_buttons.h  global_functions.c  global_functions.h  gtk_text_buffer_duplicate.c  gtk_text_buffer_duplicate.h  key_bind.c  load_fonts.c  load_fonts.h  logger_simple.c  logger_simple.h  logger_with_domain.c  logger_with_domain.h  preferences_load.c  preferences_load.h  project_adjust_dimensions.c  project_adjust_dimensions.h  project_crop.c  project_crop.h  project_read.c  project_read.h  quit_event.c  quit_event.h  resolution_selector_changed.c  resolution_selector_changed.h  (+7 more)
salasaga/ide/images/: Makefile.am
salasaga/ide/ttf/: Makefile.am
salasaga_ide/: .cproject  AUTHORS  Makefile  Makefile.am  Makefile.config.in  NEWS  NOTES.TXT  autogen.sh  backend.c  backend.h  callbacks.c  callbacks.h  configure.ac  configure.in  externs.h  gui-functions.c  gui-functions.h  salasaga.c  salasaga.desktop  salasaga_types.h  valid_fields.h
salasaga_ide/desktop/: salasaga.desktop.in
salasaga_ide/font_outline/: DejaVuSans.fdb
salasaga_ide/fonts/: Makefile.am
salasaga_ide/fonts/BitstreamVera/: Makefile.am
salasaga_ide/functions/: Makefile.am  base64_decode.c  base64_decode.h  base64_encode.c  base64_encode.h  calculate_object_boundaries.c  calculate_object_boundaries.h  compress_layers.c  compress_layers.h  compress_layers_inner.c  compress_layers_inner.h  construct_timeline_widget.c  construct_timeline_widget.h  create_film_strip.c  create_film_strip.h  create_menu_bar.c  create_menu_bar.h  create_resolution_selector.c  create_resolution_selector.h  create_time_line.c  create_time_line.h  create_timeline_slider.c  create_timeline_slider.h  create_toolbar.c  create_toolbar.h  create_tooltips.c  create_tooltips.h  create_working_area.c  create_working_area.h  create_zoom_selector.c  create_zoom_selector.h  destroy_slide.c  destroy_slide.h  detect_collisions.c  detect_collisions.h  disable_layer_toolbar_buttons.c  disable_layer_toolbar_buttons.h  disable_main_toolbar_buttons.c  disable_main_toolbar_buttons.h  display_dialog_empty.c  (+237 more)
salasaga_ide/functions/cairo/: calculate_text_object_size.c  calculate_text_object_size.h  create_cairo_pixbuf_pattern.c  create_cairo_pixbuf_pattern.h
salasaga_ide/functions/callbacks/: menu_screenshots_capture_full_screen.c  menu_screenshots_capture_full_screen.h
salasaga_ide/functions/conversion/: base64_decode.c  base64_encode.c  base64_encode.h  uri_decode.c  uri_encode_base64.c
salasaga_ide/functions/dialog/: display_dialog_empty.c  display_dialog_highlight.c  display_dialog_image.c  display_dialog_mouse.c  display_dialog_save_warning.c  display_dialog_text.c  display_dialog_text.h
salasaga_ide/functions/film_strip/: create_film_strip.c  film_strip_create_thumbnail.c  film_strip_handle_changed.h  film_strip_handle_released.h  film_strip_slide_clicked.c  regenerate_film_strip_thumbnails.c
salasaga_ide/functions/layer/: compress_layers.c  compress_layers_inner.c  get_layer_position.c  get_layer_position.h  image_crop.c  layer_copy.c  layer_delete.c  layer_duplicate.c  layer_edit.c  layer_free.c  layer_free.h  layer_move_down.c  layer_move_up.c  layer_new_highlight.c  layer_new_highlight_inner.c  layer_new_image.c  layer_new_image_inner.c  layer_new_mouse.c  layer_new_mouse_inner.c  layer_new_text.c  layer_new_text_inner.c  layer_paste.c
salasaga_ide/functions/menu/: menu_edit_preferences.c  menu_edit_preferences.h  menu_enable.c  menu_export_layer.c  menu_export_slide.c  menu_export_swf.c  menu_export_swf.h  menu_file_close.c  menu_file_new.c  menu_file_open.c  menu_file_save.c  menu_file_save_as.c  menu_file_save_layer.c  menu_file_save_slide.c  menu_help_about.c  menu_help_forum.c  menu_help_register.c  menu_help_register.h  menu_help_support.c  menu_help_survey.c  menu_help_website.c  menu_help_wiki.c  menu_project_properties.c  menu_screenshots_capture.c  menu_screenshots_capture.h  menu_screenshots_import.c
salasaga_ide/functions/slide/: slide_delete.c  slide_duration.c  slide_free.c  slide_insert.c  slide_move_bottom.c  slide_move_down.c  slide_move_top.c  slide_move_top.h  slide_move_up.c  slide_name_reset.c  slide_name_reset.h  slide_properties.c
salasaga_ide/functions/widgets/: time_line.c  time_line.h
salasaga_ide/functions/working_area/: calculate_object_boundaries.c  draw_bounding_box.c  draw_handle_box.c  draw_highlight_box.c  draw_highlight_box.h  draw_layer_start_and_end_points.h  draw_workspace.c  draw_workspace.h  event_size_allocate_received.c  working_area_button_press_event.c  working_area_button_release_event.c  working_area_expose_event.c  working_area_motion_notify_event.c
salasaga_ide/po/: LINGUAS  Makefile.in.in  POTFILES.in  en_GB.gmo  en_GB.po  pt_BR.gmo  salasaga.pot  salasaga_ide.pot
salasaga_ide/sounds/: generate_double_click.c  generate_single_click.c  generate_triple_click.c
salasaga_screencapture/: ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.config.in  NEWS  README  autogen.sh  configure.ac  configure.in  display_warning.c  display_warning.h  salasaga_screencapture.c  salasaga_types.h  valid_fields.h  validate_value.c  validate_value.h
salasaga_screencapture/m4/: ChangeLog
salasaga_screencapture/po/: ChangeLog  LINGUAS  POTFILES.in  salasaga_screencapture.pot
(+1266 files in other folders)
