bin_PROGRAMS = salasaga
salasaga_SOURCES = functions/create_menu_bar.c \
	functions/create_resolution_selector.c \
	functions/create_time_line.c \
	functions/create_toolbar.c \
	functions/create_zoom_selector.c \
	functions/disable_layer_toolbar_buttons.c \
	functions/disable_main_toolbar_buttons.c \
	functions/draw_timeline.c \
	functions/enable_layer_toolbar_buttons.c \
	functions/enable_main_toolbar_buttons.c \
	functions/key_bind.c \
	functions/logger_simple.c \
	functions/logger_with_domain.c \
	functions/preferences_load.c \
	functions/project_crop.c \
	functions/project_read.c \
	functions/quit_event.c \
	functions/resolution_selector_changed.c \
	functions/save_preferences_and_exit.c \
	functions/validate_value.c \
	functions/zoom_selector_changed.c \
	functions/cairo/calculate_text_object_size.c \
	functions/cairo/create_cairo_pixbuf_pattern.c \
	functions/callbacks/menu_screenshots_capture_full_screen.c \
	functions/conversion/base64_decode.c \
	functions/conversion/base64_encode.c \
	functions/dialog/display_dialog_empty.c \
	functions/dialog/display_dialog_highlight.c \
	functions/dialog/display_dialog_image.c \
	functions/dialog/display_dialog_mouse.c \
	functions/dialog/display_dialog_save_warning.c \
	functions/dialog/display_dialog_text.c \
	functions/dialog/display_warning.c \
	functions/export/html/export_html_wrapper.c \
	functions/export/swf/export_swf_choose_resolution_index.c \
	functions/export/swf/export_swf_control_bar.c \
	functions/export/swf/export_swf_create_layer_elements.c \
	functions/export/swf/export_swf_create_shape.c \
	functions/export/swf/export_swf_inner.c \
	functions/export/swf/export_swf_process_element.c \
	functions/export/swf/swf_add_mouse_click.c \
	functions/export/swf/swf_shape_from_image_file.c \
	functions/film_strip/create_film_strip.c \
	functions/film_strip/film_strip_create_thumbnail.c \
	functions/film_strip/film_strip_handle_changed.c \
	functions/film_strip/film_strip_handle_released.c \
	functions/film_strip/film_strip_slide_clicked.c \
	functions/film_strip/regenerate_film_strip_thumbnails.c \
	functions/layer/compress_layers.c \
	functions/layer/compress_layers_inner.c \
	functions/layer/get_layer_position.c \
	functions/layer/image_crop.c \
	functions/layer/layer_copy.c \
	functions/layer/layer_delete.c \
	functions/layer/layer_duplicate.c \
	functions/layer/layer_edit.c \
	functions/layer/layer_free.c \
	functions/layer/layer_move_down.c \
	functions/layer/layer_move_up.c \
	functions/layer/layer_new_highlight.c \
	functions/layer/layer_new_highlight_inner.c \
	functions/layer/layer_new_image.c \
	functions/layer/layer_new_image_inner.c \
	functions/layer/layer_new_mouse.c \
	functions/layer/layer_new_mouse_inner.c \
	functions/layer/layer_new_text.c \
	functions/layer/layer_new_text_inner.c \
	functions/layer/layer_paste.c \
	functions/menu/menu_edit_preferences.c \
	functions/menu/menu_enable.c \
	functions/menu/menu_export_swf.c \
	functions/menu/menu_export_layer.c \
	functions/menu/menu_export_slide.c \
	functions/menu/menu_file_close.c \
	functions/menu/menu_file_new.c \
	functions/menu/menu_file_open.c \
	functions/menu/menu_file_save.c \
	functions/menu/menu_file_save_as.c \
	functions/menu/menu_file_save_layer.c \
	functions/menu/menu_file_save_slide.c \
	functions/menu/menu_help_about.c \
	functions/menu/menu_help_forum.c \
	functions/menu/menu_help_register.c \
	functions/menu/menu_help_survey.c \
	functions/menu/menu_help_support.c \
	functions/menu/menu_help_website.c \
	functions/menu/menu_help_wiki.c \
	functions/menu/menu_project_properties.c \
	functions/menu/menu_screenshots_capture.c \
	functions/menu/menu_screenshots_import.c \
	functions/slide/slide_delete.c \
	functions/slide/slide_duration.c \
	functions/slide/slide_free.c \
	functions/slide/slide_insert.c \
	functions/slide/slide_move_bottom.c \
	functions/slide/slide_move_down.c \
	functions/slide/slide_move_top.c \
	functions/slide/slide_move_up.c \
	functions/widgets/time_line.c \
	functions/working_area/calculate_object_boundaries.c \
	functions/working_area/create_working_area.c \
	functions/working_area/detect_collisions.c \
	functions/working_area/draw_bounding_box.c \
	functions/working_area/draw_handle_box.c \
	functions/working_area/draw_highlight_box.c \
	functions/working_area/draw_layer_start_and_end_points.c \
	functions/working_area/draw_resize_handles.c \
	functions/working_area/draw_workspace.c \
	functions/working_area/event_size_allocate_received.c \
	functions/working_area/working_area_button_press_event.c \
	functions/working_area/working_area_button_release_event.c \
	functions/working_area/working_area_expose_event.c \
	functions/working_area/working_area_motion_notify_event.c \
	salasaga.c
salasaga_LDADD = $(DEPS_LIBS) $(GTK_LIBS) $(ZLIB) $(XLIB) $(MINGLIB)

AM_CPPFLAGS = $(DEPS_CFLAGS) $(GTK_CFLAGS)
