fontsdir = $(datadir)/salasaga/font_outline
fonts_DATA = \
	DejaVuSans-Bold.fdb \
	DejaVuSans-BoldOblique.fdb \
	DejaVuSansCondensed-Bold.fdb \
	DejaVuSansCondensed-BoldOblique.fdb \
	DejaVuSansCondensed.fdb \
	DejaVuSansCondensed-Oblique.fdb \
	DejaVuSans-ExtraLight.fdb \
	DejaVuSans.fdb \
	DejaVuSansMono-Bold.fdb \
	DejaVuSansMono-BoldOblique.fdb \
	DejaVuSansMono.fdb \
	DejaVuSansMono-Oblique.fdb \
	DejaVuSans-Oblique.fdb \
	DejaVuSerif-Bold.fdb \
	DejaVuSerif-BoldItalic.fdb \
	DejaVuSerifCondensed-Bold.fdb \
	DejaVuSerifCondensed-BoldItalic.fdb \
	DejaVuSerifCondensed.fdb \
	DejaVuSerifCondensed-Italic.fdb \
	DejaVuSerif.fdb \
	DejaVuSerif-Italic.fdb

DISTCLEANFILES = Makefile.in
