icon_icodir = $(datadir)/salasaga/icons
icon_ico_DATA = salasaga-icon.ico

icon_pngdir = $(datadir)/pixmaps
icon_png_DATA = salasaga-icon.png

images_pngdir = $(datadir)/salasaga/icons/72x72
images_png_DATA = \
	add_highlight.png \
	add_highlight_grayed.png \
	add_image.png \
	add_image_grayed.png \
	add_mouse.png \
	add_mouse_grayed.png \
	add_text.png \
	add_text_grayed.png \
	capture.png \
	capture_grayed.png \
	crop.png \
	crop_grayed.png \
	delete.png \
	delete_grayed.png \
	down_arrow.png \
	down_arrow_grayed.png \
	edit.png \
	edit_grayed.png \
	export_flash.png \
	export_flash_grayed.png \
	import.png \
	import_grayed.png \
	salasaga_logo.png \
	up_arrow.png \
	up_arrow_grayed.png

images_svgdir = $(datadir)/salasaga/icons/scalable
images_svg_DATA = \
	add_highlight.svg \
	add_highlight_grayed.svg \
	add_image.svg \
	add_image_grayed.svg \
	add_mouse.svg \
	add_mouse_grayed.svg \
	add_text.svg \
	add_text_grayed.svg \
	capture.svg \
	capture_grayed.svg \
	crop.svg \
	crop_grayed.svg \
	delete.svg \
	delete_grayed.svg \
	down_arrow.svg \
	down_arrow_grayed.svg \
	edit.svg \
	edit_grayed.svg \
	export_flash.svg \
	export_flash_grayed.svg \
	import.svg \
	import_grayed.svg \
	up_arrow.svg \
	up_arrow_grayed.svg

SUBDIRS = control_bar pointers

DISTCLEANFILES = Makefile.in
