images_control_bar_pngdir = $(datadir)/salasaga/icons/72x72/control_bar
images_control_bar_png_DATA = \
	1leftarrow_down.png \
	1leftarrow_over.png \
	1leftarrow_up.png \
	1rightarrow_down.png \
	1rightarrow_over.png \
	1rightarrow_up.png \
	2leftarrow_down.png \
	2leftarrow_over.png \
	2leftarrow_up.png \
	2rightarrow_down.png \
	2rightarrow_over.png \
	2rightarrow_up.png \
	3leftarrow_down.png \
	3leftarrow_over.png \
	3leftarrow_up.png \
	3rightarrow_down.png \
	3rightarrow_over.png \
	3rightarrow_up.png \
	help_down.png \
	help_over.png \
	help_up.png \
	info_down.png \
	info_over.png \
	info_up.png \
	player_pause_down.png \
	player_pause_over.png \
	player_pause_up.png \
	player_stop_down.png \
	player_stop_over.png \
	player_stop_up.png

images_control_bar_svgdir = $(datadir)/salasaga/icons/scalable/control_bar
images_control_bar_svg_DATA = \
	1leftarrow_down.svg \
	1leftarrow_over.svg \
	1leftarrow_up.svg \
	1rightarrow_down.svg \
	1rightarrow_over.svg \
	1rightarrow_up.svg \
	2leftarrow_down.svg \
	2leftarrow_over.svg \
	2leftarrow_up.svg \
	2rightarrow_down.svg \
	2rightarrow_over.svg \
	2rightarrow_up.svg \
	3leftarrow_down.svg \
	3leftarrow_over.svg \
	3leftarrow_up.svg \
	3rightarrow_down.svg \
	3rightarrow_over.svg \
	3rightarrow_up.svg \
	help_down.svg \
	help_over.svg \
	help_up.svg \
	info_down.svg \
	info_over.svg \
	info_up.svg \
	player_pause_down.svg \
	player_pause_over.svg \
	player_pause_up.svg \
	player_stop_down.svg \
	player_stop_over.svg \
	player_stop_up.svg
