fontsdir = $(datadir)/salasaga/fonts/BitstreamVera/fdb
fonts_DATA = \
	Bitstream_Vera_Sans_Mono-B-I.fdb \
	Bitstream_Vera_Sans_Mono-B.fdb \
	Bitstream_Vera_Sans_Mono-I.fdb \
	Bitstream_Vera_Sans_Mono.fdb \
	Bitstream_Vera_Sans-B-I.fdb \
	Bitstream_Vera_Sans-B.fdb \
	Bitstream_Vera_Sans-I.fdb \
	Bitstream_Vera_Sans.fdb \
	Bitstream_Vera_Serif-B.fdb \
	Bitstream_Vera_Serif.fdb