images_control_bar_pngdir = $(datadir)/salasaga/icons/72x72/control_bar/528x396
images_control_bar_png_DATA = \
	background_no_info_no_ffrv.png \
	background_no_info_with_ffrv.png \
	background_with_info_no_ffrv.png \
	background_with_info_with_ffrv.png

images_control_bar_svgdir = $(datadir)/salasaga/icons/scalable/control_bar/528x396
images_control_bar_svg_DATA = \
	background_no_info_no_ffrv.svg \
	background_no_info_with_ffrv.svg \
	background_with_info_no_ffrv.svg \
	background_with_info_with_ffrv.svg

DISTCLEANFILES = Makefile.in
